--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,8 +49,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_in_scroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp">
+            android:layout_height="wrap_content">
 
 
             <androidx.cardview.widget.CardView
@@ -137,16 +136,11 @@
             <TextView
                 android:id="@+id/text_view_three_inside_second_card"
                 style="@style/Text_Describe_Home_Fragment"
-                android:text="@string/gamaleye_sputnik_v"
+                android:text="@string/moderna"
                 app:layout_constraintLeft_toLeftOf="@id/my_second_card"
                 app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_second_card" />
 
-            <TextView
-                android:id="@+id/text_view_four_inside_second_card"
-                style="@style/Text_Describe_Home_Fragment"
-                android:text="@string/moderna"
-                app:layout_constraintLeft_toLeftOf="@id/my_second_card"
-                app:layout_constraintTop_toBottomOf="@id/text_view_three_inside_second_card" />
+
 
 
             <androidx.cardview.widget.CardView
@@ -247,6 +241,8 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/my_fifth_card"
                 style="@style/Card_View_Home_Fragment"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/my_fourth_card" />
@@ -288,12 +284,6 @@
                 app:layout_constraintLeft_toLeftOf="@id/my_fifth_card"
                 app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_fifth_card" />
 
-            <TextView
-                android:id="@+id/text_view_four_inside_fifth_card"
-                style="@style/Text_Describe_Home_Fragment"
-                android:text="@string/if_fever_is_so_high_call_doctor_for_advice"
-                app:layout_constraintLeft_toLeftOf="@id/my_fifth_card"
-                app:layout_constraintTop_toBottomOf="@id/text_view_three_inside_fifth_card" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
