--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:background="@color/white"
+    tools:theme="@style/Theme.Covid19Vaccine"
     tools:context=".ui.HomeActivity">
 
     <androidx.fragment.app.FragmentContainerView
