--- a/app/src/main/res/layout/fragment_vaccines.xml
+++ b/app/src/main/res/layout/fragment_vaccines.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
+    tools:background="@color/white"
     tools:context=".ui.fragments.VaccinesFragment">
 
     <!-- this constraintLayout contains all the cards for the vaccines -->
