--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -193,7 +193,10 @@
         <item name="android:layout_width">280dp</item>
         <item name="android:layout_height">150dp</item>
         <item name="android:layout_marginTop">28dp</item>
+        <item name="android:elevation">8.5dp</item>
+        <item name="lottie_speed">1.5</item>
         <item name="lottie_autoPlay">true</item>
+        <item name="lottie_loop">false</item>
         <item name="lottie_rawRes">@raw/getting_vaccinated</item>
     </style>
 
@@ -203,7 +206,7 @@
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:elevation">10dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">#DA5D53</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
 
