--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/secondaryBrandColor"
+    app:layoutDescription="@xml/fragment_statistics_scene"
     tools:context=".ui.fragments.StatisticsFragment">
 
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/statistics_animation"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/swipe_up"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/my_main_constraint"
         style="@style/MyLayoutBackground"
@@ -20,7 +31,8 @@
             android:id="@+id/total_cases_text"
             style="@style/totalCasesText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.razerdp.widget.animatedpieview.AnimatedPieView
             android:id="@+id/pie_chart"
@@ -36,17 +48,17 @@
             android:id="@+id/recycler_country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:elevation="16dp"
+            android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pie_chart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/item_statistics"/>
+            tools:listitem="@layout/item_statistics" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
 
 
