--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,10 +112,10 @@
     <style name="totalCasesText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">20dp</item>
-        <item name="android:layout_marginStart">24dp</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:gravity">start</item>
         <item name="android:text">@string/total_cases</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
         <item name="android:maxHeight">150dp</item>
         <item name="android:minWidth">10dp</item>
